--- a/assets/scss/components/_text_and_image.scss
+++ b/assets/scss/components/_text_and_image.scss
@@ -56,12 +56,6 @@ section.section_text_and_image{
                 
 
             }
-
-                
-
-
-                
-
             
         }
     }
@@ -100,18 +94,20 @@ section.section_text_and_image{
         }
 
         div.vertical-bars-container{
-            .vertical-bars-small{
-                // display: block;
-                // position: absolute;
-                // top: 0;
-                // right: 0;
-                
-                // object-fit: cover;
-                height: 4rem;
-                width: fit-content;
-                margin-left: auto;
-                display: block;
-                
+
+            position: relative;
+            height: 4rem;
+            width: fit-content;
+            margin-left: auto;
+            display: block;
+
+            .vertical-bars-block{
+                height: 100%;
+                width: auto;
+                position: absolute;
+                top: 0;
+                right: 0;
+
 
             }
 
@@ -148,7 +144,6 @@ section.section_text_and_image{
                     margin-bottom: 0;
                     grid-area: 3 / 4 / span 1 / span 9;
                     
-       
                 }
         
                 .btn{
@@ -161,7 +156,7 @@ section.section_text_and_image{
                 div.vertical-bars-container{
 
                     
-                    grid-area: 3 / 1 / span 1 / span 3;
+                    grid-area: 3 / 1 / span 1 / span 1;
                     width: 100%;
                     height: 100%;
 
@@ -169,13 +164,11 @@ section.section_text_and_image{
                         display: none;
                     }
 
-                    .vertical-bars{
+                    .vertical-bars-block{
                         transform: scaleX(-1); /* Reflects the element horizontally */
                         display: block;
                         height: 100%;
                         width: auto;
-                        
-      
                         
                     }
 
